--- a/pages/apply/course/free-record/free-record.wxml
+++ b/pages/apply/course/free-record/free-record.wxml
@@ -1,113 +1,117 @@
 <import src="/components/wxParse/wxParse.wxml" />
 <wxs src="./free-record.wxs" module="moduleFreeRecord" />
-
-<wu-navigation
-    title="{{nav.title}}"
-    model="{{nav.model}}"
-    backgroundColor="{{nav.backgroundColor}}"
-    transparent="{{nav.transparent}}"/>
-
+<wu-navigation title="{{nav.title}}" model="{{nav.model}}" backgroundColor="{{nav.backgroundColor}}" transparent="{{nav.transparent}}" />
 <view class="record-container" style="height: calc(100vh - {{statusBarHeight+45}}px);">
-
-        <!--选择背景音部分-->
-        <view class="lesson-dm countHtml">
-            <view class="info" wx:if="{{courseData}}" id="courseDetail">
-                <image src="{{courseData.cover_url}}" mode="aspectFill"/>
-                <view class="_txt">{{courseData.data_name}}</view>
-                <text class="iconfont icon-close" catchtap="removeCourse" wx:if="{{!recordStart}}"></text>
-            </view>
-            <view class="add" hover-class="addHover" catchtap="addCourse">
-                <text>添加模版</text><text class="iconfont icon-iconjia"></text>
-            </view>
+    <!-- 选择背景音部分 -->
+    <view class="lesson-dm countHtml">
+        <view class="info" wx:if="{{courseData}}" id="courseDetail">
+            <image src="{{courseData.cover_url}}" mode="aspectFill" />
+            <view class="_txt">{{courseData.data_name}}</view>
+            <text class="iconfont icon-close" catchtap="removeCourse" wx:if="{{!recordStart}}"></text>
         </view>
-
-        <!--选择背景音部分-->
-        <view class="record-swiper-box" style="height:{{contentHeight}}px;">
-            <scroll-view scroll-y class="record-swiper" wx:if="{{courseData && mode === '0'}}">
-                <view class="_insert">
-                    <view class="record-swiper-shade-up"></view>
-                    <view class="record-swiper-single-b" wx:if="{{courseData.prompt.length}}">
-                        <view wx:for="{{courseData.prompt}}" wx:key="time_line" class="record-swiper-single">{{item.content}}</view>
+        <view class="add" hover-class="addHover" catchtap="addCourse" wx:if="{{!recordStart}}">
+            <text>添加模版</text>
+            <text class="iconfont icon-iconjia"></text>
+        </view>
+    </view>
+    <!-- 选择背景音部分 -->
+    <view class="record-swiper-box" style="height:{{contentHeight}}px;">
+        <scroll-view scroll-y class="record-swiper" wx:if="{{courseData && mode === '0'}}">
+            <view class="_insert">
+                <view class="record-swiper-shade-up"></view>
+                <view class="record-swiper-single-b" wx:if="{{courseData.prompt.length}}">
+                    <view wx:for="{{courseData.prompt}}" wx:key="time_line" class="record-swiper-single">
+                        {{item.content}}
                     </view>
-                    <view wx:else class="record-swiper-single-n">暂无字幕</view>
-                    <view class="record-swiper-shade-down"></view>
                 </view>
-            </scroll-view>
-            <view wx:elif="{{!courseData}}" class="record-swiper-modeB"><text>自由朗读</text></view>
-            <view wx:elif="{{courseData && mode === '1'}}" class="record-swiper-modeB"><text>背诵</text></view>
-        </view>
-
-        <!--文字提醒-->
-        <view class="record-swiper-notice countHtml">
-            <text wx:if="{{!recordStart}}">录制前可以先选择好听的背景音</text>
-            <view wx:else>录制时面向手机，调高音量效果更佳。最大录制时长为<text class="color-danger">10</text>分钟。</view>
-        </view>
-
-        <!--录音部分-->
-        <view class="record-btn-box countHtml" wx:if="{{!recordSettingOpened || recordSetting}}">
-            <!--倒数部分-->
-            <view class="record-reciprocal" wx:if="{{reciprocal.visible}}">
-                <text wx:for="{{reciprocal.count}}" wx:key="*this"></text>
+                <view wx:else class="record-swiper-single-n">暂无字幕</view>
+                <view class="record-swiper-shade-down"></view>
             </view>
-            <!--录音进度-->
-            <view class="record-progress">
-                <view class="hand" style="width: {{timeHand}}px;" wx:if="{{recordStart && recordTime > 0}}">
-                    <text class="time">{{moduleFreeRecord.countTime(recordTime)}}</text>
-                </view>
+        </scroll-view>
+        <view wx:elif="{{!courseData}}" class="record-swiper-modeB">
+            <text>自由朗读</text>
+        </view>
+        <view wx:elif="{{courseData && mode === '1'}}" class="record-swiper-modeB">
+            <text>背诵</text>
+        </view>
+    </view>
+    <!-- 文字提醒 -->
+    <view class="record-swiper-notice countHtml">
+        <text wx:if="{{!recordStart}}">录制前可以先选择好听的背景音</text>
+        <view wx:else>
+            录制时面向手机，调高音量效果更佳。最大录制时长为
+            <text class="color-danger">10</text>
+            分钟。
+        </view>
+    </view>
+    <!-- 录音部分 -->
+    <view class="record-btn-box countHtml" wx:if="{{!recordSettingOpened || recordSetting}}">
+        <!-- 倒数部分 -->
+        <view class="record-reciprocal" wx:if="{{reciprocal.visible}}">
+            <text wx:for="{{reciprocal.count}}" wx:key="*this"></text>
+        </view>
+        <!-- 录音进度 -->
+        <view class="record-progress">
+            <view class="hand" style="width: {{timeHand}}px;" wx:if="{{recordStart && recordTime > 0}}">
+                <text class="time">{{moduleFreeRecord.countTime(recordTime)}}</text>
             </view>
-            <!--录音计时器部分-->
-            <!-- <view class="record-time" wx:if="{{recordStart && !reciprocal.visible}}">
+        </view>
+        <!-- 录音计时器部分 -->
+        <!-- <view class="record-time" wx:if="{{recordStart && !reciprocal.visible}}">
                 <view class="_time">{{moduleFreeRecord.countTime(recordTime)}}</view>
             </view> -->
-            <!--录音按钮部分-->
-            <view wx:if="{{!recordStart}}" class="record-btn-n">
-                <view class="_i" catchtap="getBackSoundListEvent">
-
-                    <view class="flex" wx:if="{{backgroundSoundItem}}">
-                        <view class="bs-single">
-                                <view class="_image">
-                                    <view><image src="{{backgroundSoundItem.cover_url}}" mode="aspectFill"/></view>
-                                </view>
-                                <view class="_name">{{backgroundSoundItem.title}}</view>
+        <!-- 录音按钮部分 -->
+        <view wx:if="{{!recordStart}}" class="record-btn-n">
+            <view class="_i" catchtap="getBackSoundListEvent">
+                <view class="flex" wx:if="{{backgroundSoundItem}}">
+                    <view class="bs-single">
+                        <view class="_image">
+                            <view>
+                                <image src="{{backgroundSoundItem.cover_url}}" mode="aspectFill" />
+                            </view>
                         </view>
-                    </view>
-                    <view wx:else class="backSound-n">
-                        <text class="iconfont icon-music"></text>
-                        <text>背景音</text>
-                        <text class="tip">美化增长</text>
-                    </view>
-
-                </view>
-                <view class="_i record-btn">
-                    <view bindtap="startRecord" class="_transcribe color-assistant-border">
-                        <image class="img" mode="widthFix" src="/assets/images/microphone.png"></image>
+                        <view class="_name">{{backgroundSoundItem.title}}</view>
                     </view>
                 </view>
-                <view class="_i" catchtap="modeSwitch">
-                    <view class="record-mode">
-                        <text class="{{mode === '0'?'':'_back'}}">朗诵</text><text class="{{mode === '1'?'':'_back'}}">背诵</text>
-                        <text class="iconfont icon-qiehuan"></text>
-                    </view>
+                <view wx:else class="backSound-n">
+                    <text class="iconfont icon-music"></text>
+                    <text>背景音</text>
+                    <text class="tip">美化增长</text>
                 </view>
             </view>
-            <view wx:else class="record-btn01-b">
-                <view class="record-btn01 cancel active" bindtap="cancelRecord">放弃</view>
-                <view class="record-btn01 start" bindtap="endRecord"><text class="_end"></text></view>
-                <view class="record-btn02 {{recordStart?'active':''}}">
-                    <view wx:if="{{!isPause}}" class="record-btn01 pause" bindtap="pauseRecord">暂停</view>
-                    <view wx:else class="record-btn01 pause" bindtap="resumeRecord">继续</view>
+            <view class="_i record-btn">
+                <view bindtap="startRecord" class="_transcribe color-assistant-border">
+                    <image class="img" mode="widthFix" src="/assets/images/microphone.png"></image>
+                </view>
+            </view>
+            <view class="_i" catchtap="modeSwitch">
+                <view class="record-mode">
+                    <text class="{{mode === '0'?'':'_back'}}">朗诵</text>
+                    <text class="{{mode === '1'?'':'_back'}}">背诵</text>
+                    <text class="iconfont icon-qiehuan"></text>
                 </view>
             </view>
         </view>
-
-        <view class="recordTake" wx:else>
-            <button open-type="openSetting" type="primary" plain hover-class="none"
-            class="_setingTake color-red" bindopensetting="openRecordSettingAgainEvent">微信授权录音</button>
+        <view wx:else class="record-btn01-b">
+            <view class="record-btn01 cancel active" bindtap="cancelRecord">放弃</view>
+            <view class="record-btn01 start" bindtap="endRecord">
+                <text class="_end"></text>
+            </view>
+            <view class="record-btn02 {{recordStart?'active':''}}">
+                <view wx:if="{{!isPause}}" class="record-btn01 pause" bindtap="pauseRecord">
+                    暂停
+                </view>
+                <view wx:else class="record-btn01 pause" bindtap="resumeRecord">继续</view>
+            </view>
         </view>
-
+    </view>
+    <view class="recordTake" wx:else>
+        <button open-type="openSetting" type="primary" plain hover-class="none" class="_setingTake color-red" bindopensetting="openRecordSettingAgainEvent">
+            微信授权录音
+        </button>
+    </view>
 </view>
-
-<!--提交录制数据-->
+<!-- 提交录制数据 -->
 <wu-backdrop id="wu-backdrop" bind:click="" />
 <wu-animation-group wux-class="record-over" in="{{ recordIn }}" class-names="wux-animate--slideInUp">
     <view class="_insert">
@@ -115,8 +119,14 @@
         <view class="record-over-list">
             <view class="_con">
                 <text>{{!courseData? '自由朗读':courseData.data_name}}</text>
-                <text class="_shi" catchtap="tryListenEvent" data-id="tryListenID" data-url="{{form.fileUrl}}" wx:if="{{!tryParams.isPlay || tryParams.id !== 'tryListenID'}}"><text class="iconfont icon-bofang1"></text> 试听</text>
-                <text class="_shi" catchtap="tryListenEvent" data-id="tryListenID" data-url="{{form.fileUrl}}" wx:else><text class="iconfont icon-weibiaoti519"></text> 暂停</text>
+                <text class="_shi" catchtap="tryListenEvent" data-id="tryListenID" data-url="{{form.fileUrl}}" wx:if="{{!tryParams.isPlay || tryParams.id !== 'tryListenID'}}">
+                    <text class="iconfont icon-bofang1"></text>
+                    试听
+                </text>
+                <text class="_shi" catchtap="tryListenEvent" data-id="tryListenID" data-url="{{form.fileUrl}}" wx:else>
+                    <text class="iconfont icon-weibiaoti519"></text>
+                    暂停
+                </text>
             </view>
             <view class="_back">
                 <rich-text nodes="{{moduleFreeRecord.filterText(backgroundSoundItem)}}"></rich-text>
@@ -128,9 +138,7 @@
         </view>
     </view>
 </wu-animation-group>
-
-
-<!--上传加载loading-->
+<!-- 上传加载loading -->
 <view class="loadingPlayer" wx:if="{{progressParams.visible}}">
     <view class="_insert">
         <view class="_title">正在上传录音...请稍等</view>
