--- a/pages/apply/course/free-record/free-record.wxss
+++ b/pages/apply/course/free-record/free-record.wxss
@@ -41,6 +41,7 @@
   align-items: center;
   justify-content: center;
   font-size: 40rpx;
+  transition: all linear o.3s;
 }
 .record-mode ._back{
   position: absolute;
