--- a/pages/apply/course/lesson-play/lesson-play.wxml
+++ b/pages/apply/course/lesson-play/lesson-play.wxml
@@ -2,132 +2,120 @@
 <import src="/components/wxParse/wxParse.wxml" />
 <wux-actionsheet id="wux-actionsheet"></wux-actionsheet>
 <wu-toptips id="wu-toptips"></wu-toptips>
-
-<wu-navigation id="wu-navigation" title="{{nav.title}}"
-               transparent="{{nav.transparent}}"
-               model="{{nav.model}}"
-               animation="{{nav.animation}}"></wu-navigation>
-
+<wu-navigation id="wu-navigation" title="{{nav.title}}" transparent="{{nav.transparent}}" model="{{nav.model}}" animation="{{nav.animation}}"></wu-navigation>
 <view class="container">
-
-    <view class="play-coverUrl-blur {{systemSeries==='android'?'android':''}}" wx:if="{{info}}"
-          style="background: url({{info.lesson_data.cover_url}}?imageView2/1/w/300/h/400) no-repeat top center; background-size: 120% 100%;">
-    </view>
-
+    <view class="play-coverUrl-blur {{systemSeries==='android'?'android':''}}" wx:if="{{info}}" style="background: url({{info.lesson_data.cover_url}}?imageView2/1/w/300/h/400) no-repeat top center; background-size: 120% 100%;"></view>
     <view class="play-audio">
-
         <view class="play-cover">
-               <!--词 进度切换-->
-                <swiper current="{{captionCurrent}}" bindchange="captionChangeEvent" class="play-cover-swiper">
-                    <!--进度-->
-                    <swiper-item>
-                        <view class="play-cover-progress" bindtap="turnBackPageEvent">
-                            <wu-ring-progress progress="{{progress}}"></wu-ring-progress>
-                            <image src="{{info.lesson_data.cover_url}}" mode="aspectFill" class="play-coverUrl"></image>
-                        </view>
-                        <!--当前课本信息显示-->
-                        <view class="play-lesson-title" style="top: {{statusBarHeight + 50}}px;">
-                            <view>{{info.lesson_data.data_name}}</view>
-                            <text>{{info.lesson_data.lesson_name}}</text>
-                        </view>
-                    </swiper-item>
-                    <!--词-->
-                    <swiper-item>
-                        <view class="play-words-progress">
-                            <words-progress frame="{{audioParams.currentTime}}" overall="{{info.lesson_data.prompt}}"></words-progress>
-                        </view>
-                    </swiper-item>
-                </swiper>
-        </view>
-
-        <view class="play-record" wx:if="{{info.lesson_data.bln_interact === 1}}">
-              <view class="recordUser flex" catchtap="goRecordListEvent">
-                  <image src="{{item.avatar_url}}" mode="aspectFill" class="user-image" wx:for="{{info.record_list}}" wx:key="user_id"></image>
-                  <rich-text class="recordlist _opera" nodes="{{moduleLessPlay.filterText(info.lesson_data.record_count)}}"></rich-text>
-              </view>
-              <view class="record _opera" bindtap="recordEvent">
-                  <view class="record_s"><text class="iconfont icon-luyin"></text></view>
-                  <view class="wave"></view>
-              </view>
-        </view>
-
-        <view class="play-operration">
-              <text class="time _opera">{{audioParams.sliderStart}} / {{timeTotal}}</text>
-              <view class="_opera _panel flex">
-                  <text class="mr-5">字幕</text>
-                  <wu-switch name="positive" slot="footer" size="small" color="balanced" value="{{ controlFix }}" bind:change="controlFixEvent" />
-              </view>
-              <view class="collect _opera" wx:if="{{!info.is_favor}}" bindtap="collectEvent"><text class="iconfont icon-guanzhu"></text></view>
-              <view class="collect collected _opera" bindtap="collectEvent" wx:else><text class="iconfont icon-guanzhu1"></text></view>
-              <button plain class="share _opera" hover-class="none" open-type="share"><text class="iconfont icon-chakantiezifenxiang"></text></button>
-        </view>
-
-        <view class="play-console">
-                <view class="_uniterm _panel" bindtap="openCatalogEvent"><text class="iconfont icon-list"></text></view>
-                <view class="_uniterm {{hasPrev?'':'noFocus'}}" bindtap="audioPrevEvent"><text class="iconfont icon-prev"></text></view>
-                <view class="_uniterm _play">
-                    <view class="_trigger" bindtap="audioPlayEvent">
-                        <text class="iconfont icon-bofang1" wx:if="{{!audioParams.isPlay}}"></text>
-                        <text class="iconfont icon-weibiaoti519" wx:else></text>
+            <!-- 词 进度切换 -->
+            <swiper current="{{captionCurrent}}" bindchange="captionChangeEvent" class="play-cover-swiper">
+                <!-- 进度 -->
+                <swiper-item>
+                    <view class="play-cover-progress" bindtap="turnBackPageEvent">
+                        <wu-ring-progress progress="{{progress}}"></wu-ring-progress>
+                        <image src="{{info.lesson_data.cover_url}}" mode="aspectFill" class="play-coverUrl"></image>
                     </view>
-                    <!--<view class="_loading">
+                    <!-- 当前课本信息显示 -->
+                    <view class="play-lesson-title" style="top: {{statusBarHeight + 50}}px;">
+                        <view>{{info.lesson_data.data_name}}</view>
+                        <text>{{info.lesson_data.lesson_name}}</text>
+                    </view>
+                </swiper-item>
+                <!-- 词 -->
+                <swiper-item>
+                    <view class="play-words-progress">
+                        <words-progress frame="{{audioParams.currentTime}}" overall="{{info.lesson_data.prompt}}"></words-progress>
+                    </view>
+                </swiper-item>
+            </swiper>
+        </view>
+        <view class="play-record" wx:if="{{info.lesson_data.bln_interact === 1}}">
+            <view class="recordUser flex" catchtap="goRecordListEvent">
+                <image src="{{item.avatar_url}}" mode="aspectFill" class="user-image" wx:for="{{info.record_list}}" wx:key="user_id"></image>
+                <rich-text class="recordlist _opera" nodes="{{moduleLessPlay.filterText(info.lesson_data.record_count)}}"></rich-text>
+            </view>
+            <view class="record _opera" bindtap="recordEvent">
+                <view class="record_s">
+                    <text class="iconfont icon-luyin"></text>
+                </view>
+                <view class="wave"></view>
+            </view>
+        </view>
+        <view class="play-operration">
+            <text class="time _opera">{{audioParams.sliderStart}} / {{timeTotal}}</text>
+            <view class="_opera _panel flex">
+                <text class="mr-5">字幕</text>
+                <wu-switch name="positive" slot="footer" size="small" color="balanced" value="{{ controlFix }}" bind:change="controlFixEvent" />
+            </view>
+            <view class="collect _opera" wx:if="{{!info.is_favor}}" bindtap="collectEvent">
+                <text class="iconfont icon-guanzhu"></text>
+            </view>
+            <view class="collect collected _opera" bindtap="collectEvent" wx:else>
+                <text class="iconfont icon-guanzhu1"></text>
+            </view>
+            <button plain class="share _opera" hover-class="none" open-type="share">
+                <text class="iconfont icon-chakantiezifenxiang"></text>
+            </button>
+        </view>
+        <view class="play-console">
+            <view class="_uniterm _panel" bindtap="openCatalogEvent">
+                <text class="iconfont icon-list"></text>
+            </view>
+            <view class="_uniterm {{hasPrev?'':'noFocus'}}" bindtap="audioPrevEvent">
+                <text class="iconfont icon-prev"></text>
+            </view>
+            <view class="_uniterm _play">
+                <view class="_trigger" bindtap="audioPlayEvent">
+                    <text class="iconfont icon-bofang1" wx:if="{{!audioParams.isPlay}}"></text>
+                    <text class="iconfont icon-weibiaoti519" wx:else></text>
+                </view>
+                <!-- <view class="_loading">
                         <canvas class="_loadingCanvas" canvas-id="loadingCanvas"></canvas>
-                    </view>-->
-                </view>
-                <view class="_uniterm {{hasNext?'':'noFocus'}}" bindtap="audioNextEvent"><text class="iconfont icon-next"></text></view>
-                <view class="_uniterm" wx:if="{{state==='order'}}" bindtap="audioLoopEvent"><text class="iconfont icon-shunxubofang"></text></view>
-                <view class="_uniterm" wx:else bindtap="audioLoopEvent"><text class="iconfont icon-loop"></text></view>
-
-
-                <view class="_progress" hidden="{{!sliderProgressVisible}}">
-                    <slider bindchange="sliderChangeEvent"
-                        min="0"
-                        max="100"
-                        backgroundColor="#e9e9e9"
-                        block-size="12"
-                        block-color="#000000"
-                        activeColor="#000000"
-                        value="{{audioParams.sliderValue}}"/>
-                </view>
-      </view>
-
+                    </view> -->
+            </view>
+            <view class="_uniterm {{hasNext?'':'noFocus'}}" bindtap="audioNextEvent">
+                <text class="iconfont icon-next"></text>
+            </view>
+            <view class="_uniterm" wx:if="{{state==='order'}}" bindtap="audioLoopEvent">
+                <text class="iconfont icon-shunxubofang"></text>
+            </view>
+            <view class="_uniterm" wx:else bindtap="audioLoopEvent">
+                <text class="iconfont icon-loop"></text>
+            </view>
+            <view class="_progress" hidden="{{!sliderProgressVisible}}">
+                <slider bindchange="sliderChangeEvent" min="0" max="100" backgroundColor="#e9e9e9" block-size="12" block-color="#000000" activeColor="#000000" value="{{audioParams.sliderValue}}" />
+            </view>
+        </view>
     </view>
 </view>
-
-<!--显示目录-->
-<wu-backdrop id="wu-backdrop-catalog" bind:click="closeCatalogEvent" opacity="0" zIndex="1900"/>
+<!-- 显示目录 -->
+<wu-backdrop id="wu-backdrop-catalog" bind:click="closeCatalogEvent" opacity="0" zIndex="1900" />
 <wu-animation-group wux-class="catalog-frame" in="{{ catalogIn }}" class-names="wux-animate--slideInUp">
     <view class="_insert {{systemSeries==='android'?'android':''}}">
         <view class="play-section">
-            <view class="play-section-title"><text>目录</text></view>
-            <scroll-view scroll-y style="height: 60vh;" bindscrolltolower="lessonScrollToLowerEvent">
-            <!--目录-->
-            <view class="catalog-single {{!info.is_enroll && lesson.open_state === 0?'desabled':''}}"
-                  wx:for="{{content.list}}"
-                  wx:for-index="i"
-                  wx:for-item="lesson"
-                  wx:key="lesson_id">
-                <view class="_title">
-                    <text>{{lesson.lesson_name}}</text>
-                    <text class="iconfont icon-xianshihoumai" wx:if="{{!((info.is_enroll && lesson.open_state===0) || (!info.is_enroll && lesson.open_state === 0))}}"></text>
-                </view>
-                <view class="_list {{(item.data_id===info.lesson_data.data_id) && ((!info.is_enroll && lesson.open_state===1) || info.is_enroll)?'active':''}}"
-                      wx:for="{{lesson.lesson_data}}"
-                      wx:key="data_id"
-                      bindtap="changeAudioEvent"
-                      data-openState="{{lesson.open_state}}"
-                      data-id="{{item.data_id}}">
-                    <view class="__dataName">
-                        <text class="iconfont icon-htmal5icon46" hidden="{{!(!info.is_enroll && lesson.open_state === 0)}}"></text>
-                        <text class="iconfont icon-bofang font-14" hidden="{{item.data_id===info.lesson_data.data_id? false:true}}"></text> {{item.data_name}}
-                    </view>
-                    <view class="__dataType">
-                        <text class="iconfont icon-yinpin _indicate" wx:if="{{item.format === 'audio'}}"></text>
-                        <text class="iconfont icon-shipin _indicate" wx:elif="{{item.format === 'video'}}"></text>
-                        <text wx:else class="_indicate"></text>
-                    </view>
-                </view>
+            <view class="play-section-title">
+                <text>目录</text>
             </view>
+            <scroll-view scroll-y style="height: 60vh;" bindscrolltolower="lessonScrollToLowerEvent">
+                <!-- 目录 -->
+                <view class="catalog-single {{!info.is_enroll && lesson.open_state === 0?'desabled':''}}" wx:for="{{content.list}}" wx:for-index="i" wx:for-item="lesson" wx:key="lesson_id">
+                    <view class="_title">
+                        <text>{{lesson.lesson_name}}</text>
+                        <text class="iconfont icon-xianshihoumai" wx:if="{{!((info.is_enroll && lesson.open_state===0) || (!info.is_enroll && lesson.open_state === 0))}}"></text>
+                    </view>
+                    <view class="_list {{(item.data_id===info.lesson_data.data_id) && ((!info.is_enroll && lesson.open_state===1) || info.is_enroll)?'active':''}}" wx:for="{{lesson.lesson_data}}" wx:key="data_id" bindtap="changeAudioEvent" data-openState="{{lesson.open_state}}" data-id="{{item.data_id}}">
+                        <view class="__dataName">
+                            <text class="iconfont icon-htmal5icon46" hidden="{{!(!info.is_enroll && lesson.open_state === 0)}}"></text>
+                            <text class="iconfont icon-bofang font-14" hidden="{{item.data_id===info.lesson_data.data_id? false:true}}"></text>
+                            {{item.data_name}}
+                        </view>
+                        <view class="__dataType">
+                            <text class="iconfont icon-yinpin _indicate" wx:if="{{item.format === 'audio'}}"></text>
+                            <text class="iconfont icon-shipin _indicate" wx:elif="{{item.format === 'video'}}"></text>
+                            <text wx:else class="_indicate"></text>
+                        </view>
+                    </view>
+                </view>
             </scroll-view>
         </view>
     </view>
