--- a/pages/tabBar/find/find.wxss
+++ b/pages/tabBar/find/find.wxss
@@ -174,7 +174,7 @@
 .watch-time>text:last-child{ color: #999999; font-size: 34rpx; display: inline-block; margin-left: 10rpx;}
 .watch-box{ padding: 20rpx 0 20rpx 0;}
 .watch-single{margin: 0 40rpx 80rpx;}
-.watch-single:last-child{ margin-bottom: 0;}
+.watch-single.last{ margin-bottom: 0;}
 .watch-single-nodata{ text-align: center; font-size: 24rpx; color: #999999; padding: 30rpx 0;}
 /*******course*******/
 .data-single {
