--- a/pages/apply/mine/my-collect/my-collect.wxss
+++ b/pages/apply/mine/my-collect/my-collect.wxss
@@ -1,39 +1,41 @@
 page{
     background-color: #f7f7f7;
 }
-
 .collect-type{
     background-color: white;
     padding: 20rpx 10rpx;
     margin: 20rpx;
     border-radius: 10rpx;
 }
-.collect-type text{
+.collect-type .item{
     position: relative;
     color: #4c9c47;
     width: 33.33%;
     text-align: center;
     display: inline-block;
-    padding: 15rpx 0;
     vertical-align: middle;
+    padding: 15rpx 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-.collect-type text:nth-child(3n)::after, .collect-type text:last-child::after{
+.collect-type .item:nth-child(3n)::after, .collect-type .item:last-child::after{
     content: "";
 }
-.collect-type text::after{
+.collect-type .item::after{
     position: absolute;
     content: "|";
     right: 0;
     top: 10rpx;
     font-size: 28rpx;
 }
-.collect-type text.active{ color: #0c3a01;}
+.collect-type .item.active{ color: #0c3a01;}
 
 .collect-listSingle{
     background-color: white;
     margin: 20rpx;
     border-radius: 10rpx;
-    padding: 40rpx 40rpx 20rpx 40rpx;
+    padding: 30rpx 30rpx 20rpx 30rpx;
 }
 
 .collect-listSingle-h ._img{ float: left; width: 120rpx; height: 120rpx;}
@@ -42,7 +44,7 @@ page{
     padding-left: 160rpx;
 }
 .collect-listSingle-h ._del ._name{
-    font-size: 38rpx;
+    font-size: 36rpx;
 }
 .collect-listSingle-h ._del ._desc{
     font-size: 26rpx;
@@ -53,6 +55,21 @@ page{
     -webkit-line-clamp:2;
     overflow:hidden;
 }
-.collect-listSingle ._time{color: #999; font-size: 30rpx; display: inline-block;}
-.nodate{ text-align: center; padding: 50rpx 30rpx; font-size: 24rpx; color: #999;}
-.nomore{ text-align: center; padding: 20rpx; font-size: 24rpx; color: #999;}
+.collect-listSingle ._time{
+    color: #999; 
+    font-size: 28rpx; 
+    display: inline-block;
+}
+.nodate{ 
+    text-align: 
+    center; 
+    padding: 50rpx 30rpx; 
+    font-size: 24rpx; 
+    color: #999;
+}
+.nomore{
+     text-align: center;
+    padding: 20rpx; 
+    font-size: 24rpx; 
+    color: #999;
+}
